AC-827 Improvments based on code review feedback (disposing of credentials after auth is complete, using alternate base 64 impl as Base64 is java 8, allowing users to set the credentials lifetime and uisng the proper modifiers for the loggers)